[package]
name = "pvpn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display", "from"] }
log = "0.4.28"
mio = { version = "1.0.4", features = ["net", "os-poll"] }
rstaples = "0.1.3"
bytes = "1.10.1"
byteorder = "1.5.0"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for speed
lto = true
