[package]
name = "pvpn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2.0", features = ["display", "from"] }
log = "0.4"
mio = { version = "1.0", features = ["net", "os-poll"] }
rstaples = "0.1"
bytes = "1.10"
byteorder = "1.5"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for speed
lto = true
