[package]
name = "pvpn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
derive_more = { version = "2.1", features = ["display", "from"] }
log = "0.4"
mio = { version = "1.2", features = ["net", "os-poll"] }
rstaples = "0.4"
bytes = "1.11"
byteorder = "1.5"
env_logger = "0.11.10"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = 3   # Optimize for speed
lto = true
